--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
 <body>
   <table>
     <tr>
-      <td><img src="images/fb.jpg" alt=""></td>
+      <td><img src="https://avatars0.githubusercontent.com/u/53312692?s=460&u=46a5c81bb998a5f0017549466c011b609cd0da86&v=4" alt=""></td>
       <td>
         <h1>Harish Kemkar</h1>
         <p>Associate at Deutsche Bank</p>
         <p>In my nearly 10 years of IT experience, I have played multiple
-          <br> roles as per organization needs and contributed in solving business problems.</p>
+          <br> roles as per organization needs and contributed in solving business problems.
+	  <br> Currently i am working as an application support SME for supporting business critical application in investment domain</p> 	
       </td>
     </tr>
   </table>
@@ -35,7 +36,6 @@
       <li><a href=" https://www.hackerrank.com/HKemkar?hr_r=1">Python</a></li>
       <li>SQL</li>
       <li>UNIX</li>
-      <li><a href="https://www.kaggle.com/harishkemkar812">Machine Learning</a></li>
       <li>HTML</li>
     </ul>
   </p>
@@ -63,42 +63,70 @@
   </table>
   <hr>
   <p>
-    <h3>Projects Data Science</h3>
+    <h3>Projects Summary</h3>
   </p>
-  <p><strong> Bigmart Sales Data Analysis</strong> <br>
-    Sales and product data for multiple products across various stores in different cities.</p>
+  <p><strong>Index Production Management</strong> <br>
+   Role </p>
   <ol>
-    <li>Performed exploratory data analysis visualization to understand data insights.</li>
-    <li>Feature engineering to include relevant variables in model.</li>
-    <li>Created predictive model to predict sales.</li>
-    <li>Make predictions using the model.</li>
-    <li>Evaluated Regression models to select best suitable.</li>
+    <li>Currently working as an application lead in Deutsche Bank Research Index Unit.</li>
+    <li>Manage and chair production stability meetings.</li>
+    <li>Automation of BAU activity which helped support team to identify production issues in less time.</li>
+    <li>Vendor & User management to help resolve their issues.</li>
+    <li>Ensured service level agreements were met by managing technical support related operations.</li>
+    <li>Effectively utilized automation tools to reduce production host logins.</li>
+    <li>Establishing team objectives and drive performance improvements.</li>
+    <li>Arrange, assign, adjust and monitor shifts to have apt coverage.</li>
+    <li>Interact with infrastructure, release management, change management, QA, DBA and application teams to ensure smooth running of critical applications.</li>
+    <li>Be the first point of contact for any escalations from the customer and development teams.</li>
+    <li>Resolved diverse range of technical issues across multiple systems and applications for customers and end-users across EMEA time zones.</li>
+    <li>Develop and implement practices that measure the effectiveness and performance of the Technical Support Function.</li>
+
 
   </ol>
-  <p><strong> Titanic passenger survivor prediction </strong> <br>
-    Passenger data of passengers travelling on Titanic
+  <p><strong> Automation Project - Pre rebal File processing - (Python) </strong> <br>
+    Role 
   </p>
   <ol>
-    <li>Performed exploratory data analysis visualization to understand data insights.</li>
-    <li>Feature engineering to include relevant variables in model.</li>
-    <li>Created predictive model to predict survivors.</li>
-    <li>Created Logistic Regression model predicted survivors</li>
+    <li>Automated the daily processing of processing index rebalance data.</li>
+    <li>Legacy process was to receive files from middle office perform quality checks on data and transform data in format ready to be used by job.</li>
+    <li>Automation of BAU activity which helped support team to identify production issues in less time.</li>
+    <li>Created python based gui tool to automate complete workflow.</li>
+    <li>Apart from creating files also provided the additional functionality of reconciliation after index rebalance has been completed.</li>
 
   </ol>
   <hr>
   <h3>Projects Automation</h3>
-  <p><strong>Pre rebal File processing - (Python Tkinter)</strong> <br></p>
+  <p><strong> IR Production Management Client Name-Morgan Stanley</strong> <br></p>
   <ol>
-    <li>Automated the daily processing of index rebalance data.</li>
-    <li>Legacy process was to receive files from middle office perform quality checks <br>
-      on data and transform data in format ready to be used by application.</li>
-    <li>Created tool gui based tool to automate complete workflow.</li>
-    <li>Apart from creating files also provided the additional functionality of <br>
-      reconciliation after index rebalance has been completed.</li>
+    <li>Ensuring smooth working of Front office trading applications on all business days with special attention on critical business events.</li>
+    <li>Independently managed new trader on-boarding process.</li>
+    <li>Be on top of ticket backlog so as to maintain it within manageable levels at all times need to flag consistently high backlogs which may indicate need for additional bandwidth assignment on a long-term basis Involved in daily RFB of critical bond trading applications and work on resolutions in case of any issues.</li>
+    <li>Managed and resolved issues related to market connectivity, this involves working with external agencies for resolution of service.</li>
+    <li>Effectively utilizing L1 support by off-boarding tasks which can be handled by them after proper transition and documentation.</li>
+    <li>Ensured proper communications are sent to business and technology owners in case of production outages.</li>
+    <li>Extensively worked to make post incident reviews crisp and yet include technical details.</li>
+    <li>Plan and supervise the daily activities of offshore application support team.</li>
+    <li>Independently managed Bond marking process from offshore on UK holidays.</li>
+    <li>Active member of stability initiatives to ensure smooth working of applications.</li>
+    <li>Involved in resolving production problems for the applications and ensure all support service level agreements are met.</li>
+    <li>Design escalation plans for teams to ensure the right people are on call to tackle critical issues.</li>
+    <li>Manage vendor evaluation and selection process for various projects and manage internal as well as contract resources.</li>
   </ol>
   <hr>
+  <hr>
+  <h3>Projects Automation</h3>
+  <p><strong> LBG Debt Management, Client Name-LBG,Halifax Bank </strong> <br></p>
+  <ol>
+    <li> Involved in implementation of enhancements and provided support during system testing.</li>
+    <li> Independently managed Change Management Process.</li>
+    <li> Provided Technical support during integration phase of applications.</li>
+	<li> Prepared root cause analysis for problems occurred.</li>
+  </ol>
+  <hr>
+	
+
   <h3>Contact Details</h3>
-  <p>Email<em>- <strong>Harishkemkar812@gmail.com</strong></em>
+  <p>Email<em>- <strong>Harishkemkar@gmail.com</strong></em>
     <br>
     <strong>9158994706</strong>
   </p>
